Starting exporter and added new units tests for deep learning module.